Refectoring to new approach of comand line execution