@@ -1,21 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>br.ufba.pos</groupId>
-  <artifactId>Algorithms_Divide_and_Conquer</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>algorithms_pss</artifactId>
+  <version>1.0</version>
   <packaging>jar</packaging>
 
-  <name>Algorithms_Divide_and_Conquer</name>
-  <url>http://maven.apache.org</url>
+  <!-- Nome do projeto -->
+  <name>Algorithms - problem-solving strategy</name>
 
+  <!-- Definições e propriedades -->
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <tablesaw.version>0.42.0</tablesaw.version>
+    <tablesaw.version>0.44.4</tablesaw.version>
+    <log4j2.version>2.24.3</log4j2.version>
   </properties>
 
   <dependencies>
+    <!-- Dependências necessárias -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -35,22 +38,82 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>3.14.0</version>
+      <version>3.18.0</version>
     </dependency>
   </dependencies>
+
   <build>
+    <!-- Nome final do arquivo -->
+    <finalName>algorithms_pss</finalName>
     <plugins>
+      <!-- Plugin do compilador Java -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.13.0</version>
         <configuration>
           <release>17</release>
+          <compilerArgs>
+            <arg>--enable-preview</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
+
+      <!-- Plugin do Maven Shade -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.6.0</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <!-- Evita criação do JAR original -->
+              <createDependencyReducedPom>false</createDependencyReducedPom>
+              <shadedArtifactAttached>false</shadedArtifactAttached>
+              <outputFile>${project.build.directory}/algorithms_pss.jar</outputFile>
+              <transformers>
+                <!-- Classe principal -->
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>br.ufba.pos.Main</mainClass>
+                </transformer>
+              </transformers>
+              <!-- Excluir duplicatas -->
+              <filters>
+                <filter>
+                  <artifact>*:*</artifact>
+                  <excludes>
+                    <exclude>META-INF/*.SF</exclude>
+                    <exclude>META-INF/*.DSA</exclude>
+                    <exclude>META-INF/*.RSA</exclude>
+                  </excludes>
+                </filter>
+              </filters>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
+
+      <!-- Plugin para limpeza completa antes da instalação -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+          <filesets>
+            <fileset>
+              <directory>${project.build.directory}</directory>
+              <includes>
+                <include>*.jar</include>
+              </includes>
+            </fileset>
+          </filesets>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 </project>
